# mangrove

./: .gitignore
backend/: PERSISTENCE.md  cleanup_backups.py  example_persistence.py  pyproject.toml
backend/app/: __init__.py  api.py  main.py  persistence.py  schemas.py  services.py
backend/app/models/: __init__.py  sample_tree.py  task_node.py
backend/trees/: default.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: TaskDetailsSidebar.tsx  TreeCanvas.tsx  TreeNode.tsx  TreeSelector.tsx  TreeView.tsx
